# qa-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
backend/: Dockerfile
backend/data/chroma/: chroma.sqlite3
backend/eval/: __init__.py  bootstrap_kb.py  golden_qa.jsonl  run_eval.py
backend/kb_qa_agent/: SETTINGS.yaml  __init__.py  config.py  main.py
backend/kb_qa_agent/api/: __init__.py  chat.py  health.py  models.py  security.py
backend/kb_qa_agent/core/: __init__.py  chunking.py  flow_engine.py  model_request.py  planner.py  rag.py  react_loop.py  reflection.py  router.py  sandbox.py  skill_loader.py  tool_registry.py
backend/kb_qa_agent/domains/: __init__.py  _common.py
backend/kb_qa_agent/flows/: __init__.py  dep_executor.py  intake.py  plan_gen.py  reflection.py  risk_approval.py
backend/kb_qa_agent/mcp_clients/: __init__.py  amap_client.py  internal_mcp_client.py
backend/kb_qa_agent/observability/: __init__.py  cost.py  eval.py  logging_setup.py  metrics.py  otel.py  redact.py  request_id_middleware.py  tracer.py
backend/mock_mcp_servers/: Dockerfile  __init__.py  internal_systems_mcp.py
backend/tests/: conftest.py  test_agently_adapter.py  test_api_chat.py  test_chat_with_citations.py  test_chunking.py  test_claude.py  test_cors.py  test_cost.py  test_dep_executor.py  test_domains.py  test_domains_finance.py  test_env_keys.py  test_ingest_idempotent.py  test_mcp_server.py  test_metrics_ready.py  test_openai_compat_extra.py  test_otel.py  test_otel_extra.py  test_plan_gen.py  test_planner.py  test_providers.py  test_rag_format.py  test_rag_lifespan.py  test_react_loop.py  test_redact.py  test_reflection.py  test_request_id.py  test_request_provider.py  test_router.py  test_sandbox.py  test_security.py  test_skill_loader.py  test_thinking_split.py  test_tool_registry.py
data/mock_db/: finance.json  hr.json  it.json  legal.json
docs/: ARCHITECTURE.md  CODE_MAP.md  DEMO.md  IMPROVEMENT_ROADMAP.md  PROVIDER_SETUP.md  SDD.md  TDD.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
specs/: _template.spec.md  chat.spec.md  chunking.spec.md  observability.spec.md  planner.spec.md  providers.spec.md  sandbox.spec.md  tool_registry.spec.md
(+51 files in other folders)
