[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-qa-agent"
version = "0.1.0"
description = "企业知识库问答助手 — 集成 LLM Provider、RAG、MCP、Skills 与流式输出的端到端智能体骨架"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "kb-qa-agent maintainers" },
]
keywords = [
    "agent", "llm", "rag", "skills", "mcp", "agently",
    "document-review", "enterprise-knowledge-base",
]

# ---------- Core runtime ----------
dependencies = [
    # Agently 主框架
    "agently>=4.1,<5.0",              # includes TriggerFlow submodule

    # FastAPI 服务化
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",

    # HTTP / SSE
    "httpx>=0.27",
    "sse-starlette>=2.0",

    # Provider SDKs
    "openai>=1.30",                    # openai / dashscope / deepseek / minimax / kimi / glm 兼容
    "anthropic>=0.30",                 # Claude / Opus

    # RAG
    "chromadb>=0.5",
    "onnxruntime<1.23; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sentence-transformers>=2.7",      # 本地 embedding (bge-small-zh)
    "tiktoken>=0.7",

    # MCP
    "mcp>=1.0",                        # FastMCP 客户端 + 服务端共用
    "fastmcp>=0.4",                    # mock_mcp_servers 用
    "cryptography<43",                  # use available macOS x86_64 wheels

    # Config / IO
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.7",                      # 友好 CLI 输出

    # Observability
    "opentelemetry-api>=1.24",
    "prometheus-client>=0.20",
]

# ---------- Dev / Test / Eval ----------
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "ipython>=8.20",
]
eval = [
    "datasets>=2.18",
    "pandas>=2.2",
]

# ---------- Project layout ----------
[tool.setuptools.packages.find]
where = ["backend"]
include = ["kb_qa_agent*"]

# ---------- Tooling ----------
[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
